Change descriptions for chat commands help

--- a/locale/template.txt
+++ b/locale/template.txt
@@ -5,8 +5,8 @@
 hidename =
 showname =
 
-Hide nametag =
-Show nametag =
+Make nametag hidden =
+Make nametag visible =
 Nametag is now hidden =
 Nametag is now visible =
 Nametag is already hidden =
