Add 'Error' in 'Unknown parameter message

--- a/locale/template.txt
+++ b/locale/template.txt
@@ -4,7 +4,7 @@
 Nametag: =
 Status: hidden =
 Status: visible =
-Unknown parameter: =
+Error: Unknown parameter: =
 
 Make nametag hidden =
 Make nametag visible =
