--- a/locale/template.txt
+++ b/locale/template.txt
@@ -4,7 +4,7 @@
 Nametag:=
 Status:hidden =
 Status:visible =
-Error:Unknown parameter:=
+Error: Unknown parameter: @1=
 
 Make nametag hidden=
 Make nametag visible=
