--- a/locale/template.txt
+++ b/locale/template.txt
@@ -1,10 +1,9 @@
 # Translation by:
 
 
-Nametag:=
-Status:hidden =
-Status:visible =
-Error: Unknown parameter: @1=
+Nametag: @1=
+Status: hidden=
+Status: visible=
 
 Make nametag hidden=
 Make nametag visible=
@@ -12,5 +11,7 @@ Nametag is now hidden=
 Nametag is now visible=
 Nametag is already hidden=
 Nametag is already visible=
+
+ERROR: Unknown parameter: @1=
 ERROR: Could not hide nametag=
 ERROR: Could not show nametag=
