--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,4 @@
 TODO:
 - retrieve custom nametag text if set when checking status
 - check if "nametag" chat command is already in use before registering
+- make compatible with "invisible" mod /vanish command & "invisibility" mod
