--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,11 @@ next
 - added missing "textdomain" line to localization template
 - added Spanish translation
 - fixed status not retrieving custom nametag text when hidden
-- compatible with invisibility mod ( https://content.minetest.net/packages/TenPlus1/invisibility/ )
+- compatible with mods providing "invisibility":
+	- invisibility ( https://content.minetest.net/packages/TenPlus1/invisibility/ )
+		- won't try change nametag while invisible
+	- invisible ( https://content.minetest.net/packages/AiTechEye/invisible/ )
+		- won't unhide nametag if hidden before sneak
 
 
 v1.1
